// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> Text null 1`] = `
<div
  className="text"
  data-test="Text"
/>
`;

exports[`<Text> Text with h1 topic and teaser 1`] = `
<div
  className="text"
  data-test="Text"
>
  <Tag
    type="h1"
  >
    Hello Jest
  </Tag>
  <strong
    dangerouslySetInnerHTML={
      Object {
        "__html": "This is a teaser text.",
      }
    }
  />
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Let's write some tests",
      }
    }
  />
</div>
`;

exports[`<Text> Text with h2 topic 1`] = `
<div
  className="text"
  data-test="Text"
>
  <Tag
    type="h2"
  >
    Hello Jest
  </Tag>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Let's write some tests",
      }
    }
  />
</div>
`;

exports[`<Text> Text with only teaser 1`] = `
<div
  className="text"
  data-test="Text"
>
  <strong
    dangerouslySetInnerHTML={
      Object {
        "__html": "This is a teaser text.",
      }
    }
  />
</div>
`;

exports[`<Text> Text with only text 1`] = `
<div
  className="text"
  data-test="Text"
>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Let's write some tests",
      }
    }
  />
</div>
`;
